--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="anime_home_button_following">正在追</string>
-    <string name="anime_home_button_index">索引</string>
-    <string name="anime_home_button_timeline">时间表</string>
-    <string name="anime_home_button_unknown">待定</string>
-
+<resources>
     <string name="app_name">BV</string>
-
-    <string name="audio_132k">132K</string>
-    <string name="audio_192k">192K</string>
-    <string name="audio_64k">64K</string>
-    <string name="audio_dolby_atoms">Dolby Atoms</string>
-    <string name="audio_hi_res">Hi-Res</string>
-
-    <string name="common_confirm">确定</string>
 
     <string name="confirm">确认</string>
 
@@ -21,47 +8,20 @@
     <string name="date_format_just_now">刚刚</string>
     <string name="date_format_minutes_age">%1$d 分钟前</string>
 
+    <string name="disclaimer_dialog_text">依据国家现行相关政策规定\n请确认在非互联网电视端使用</string>
+    <string name="disclaimer_dialog_title">注意了！</string>
+
     <string name="exception_auth_failure">用户身份认证已失效，请重新登录</string>
 
-    <string name="favorite_button_text">收藏</string>
-    <string name="favorite_dialog_title">选择收藏夹</string>
-
-    <string name="filter_dialog_open_tip">长按确认键更改筛选</string>
-    <string name="filter_dialog_open_tip_click">点击打开筛选</string>
-    <string name="filter_dialog_title">筛选</string>
-
-    <string name="follow_bangumi_disable_fail">取消追番失败</string>
-    <string name="follow_bangumi_enable_fail">追番失败</string>
-
-    <string name="following_season_status_all">全部</string>
-    <string name="following_season_status_want">想看</string>
-    <string name="following_season_status_watched">看过</string>
-    <string name="following_season_status_watching">在看</string>
-    <string name="following_season_type_bangumi">番剧</string>
-    <string name="following_season_type_film_and_television">影视</string>
-
-    <string name="home_press_back_again_to_exit">再次按下返回键退出 Bug Video</string>
-
     <string name="load_data_count">已加载 %1$d 条数据</string>
-    <string name="load_data_count_no_more">已加载全部共 %1$d 条数据</string>
     <string name="load_data_no_more">就只有这么多了</string>
 
-    <string name="loading" tools:ignore="TypographyEllipsis">加载中...</string>
-
-    <string name="login_error">出现错误</string>
-    <string name="login_expired">二维码已过期</string>
-    <string name="login_requesting">请求二维码中</string>
-    <string name="login_retry">按下 确认键 重试</string>
-    <string name="login_success">登录成功</string>
-    <string name="login_wait_for_confirm">请确认登录</string>
-    <string name="login_wait_for_scan">请扫描二维码</string>
+    <string name="loading">加载中...</string>
 
     <string name="logout_dialog_confirm">gkd 别墨迹</string>
     <string name="logout_dialog_dismiss">不，我不想</string>
     <string name="logout_dialog_text">是否登出账号 %1$s</string>
     <string name="logout_dialog_title">登出确认</string>
-
-    <string name="no_data">无可用数据</string>
 
     <string name="play_time_finish">已看完</string>
     <string name="play_time_history">%1$s / %2$s</string>
@@ -78,14 +38,6 @@
     <string name="player_controller_menu_item_subtitle_padding">字幕底部间距</string>
     <string name="player_controller_menu_item_video_aspect_ratio">视频比例</string>
     <string name="player_controller_menu_item_video_codec">视频编码</string>
-    <string name="player_tip_need_pay">请先购买影片再进行观看\n不支持试看</string>
-
-    <string name="region_block_character_painting">:(</string>
-    <string name="region_block_qr_content">扫码也没有用的！</string>
-    <string name="region_block_solution_text">不要在中国大陆地区使用该应用</string>
-    <string name="region_block_solution_title">该问题的解决方法就是：</string>
-    <string name="region_block_subtitle">您无法在中国大陆区域使用 Bug Video</string>
-    <string name="region_block_title">不支持的使用地区</string>
 
     <string name="resolution_1080p">1080P 高清</string>
     <string name="resolution_1080p_60">1080P60 高帧率</string>
@@ -112,143 +64,60 @@
     <string name="resolution_hdr">HDR 真彩色</string>
     <string name="resolution_hdr_short">HDR</string>
 
-    <string name="search_input_history">历史记录</string>
-    <string name="search_input_hotword">bilibili 热搜</string>
-    <string name="search_input_soft_keybord_clear">清空</string>
-    <string name="search_input_soft_keybord_delete">删除</string>
-    <string name="search_input_soft_keybord_search">搜索</string>
-    <string name="search_input_suggest">你可能要找的是</string>
-    <string name="search_input_title">搜索</string>
-    <string name="search_result_filter_duration_10_to_30">10–30 分钟</string>
-    <string name="search_result_filter_duration_30_to_60">30–60 分钟</string>
-    <string name="search_result_filter_duration_all">全部时长</string>
-    <string name="search_result_filter_duration_less_than_10">10 分钟以下</string>
-    <string name="search_result_filter_duration_more_than_60">60 分钟以上</string>
-    <string name="search_result_filter_order_type_comprehensive_sort">综合排序</string>
-    <string name="search_result_filter_order_type_latest_publish">最新发布</string>
-    <string name="search_result_filter_order_type_most_clicks">最多点击</string>
-    <string name="search_result_filter_order_type_most_danmaku">最多弹幕</string>
-    <string name="search_result_filter_order_type_most_favorites">最多收藏</string>
-    <string name="search_result_type_name_bili_user">用户</string>
-    <string name="search_result_type_name_media_bangumi">番剧</string>
-    <string name="search_result_type_name_media_ft">影视</string>
-    <string name="search_result_type_name_video">视频</string>
-
-    <string name="season_feature_film">正片</string>
-    <string name="season_no_feature_film">还没有正片</string>
-
     <string name="settings_info_manufacturer">厂商: %1$s</string>
-    <string name="settings_info_memory">内存: 可用 %1$s 共 %2$s</string>
+    <string name="settings_info_memory">内存: %1$s</string>
     <string name="settings_info_model">型号: %1$s (%2$s)</string>
-    <string name="settings_info_screen">屏幕: %1$d x %2$d %3$fHz</string>
+    <string name="settings_info_resolution">分辨率: %1$d x %2$d</string>
     <string name="settings_info_soc">SOC: %1$s %2$s</string>
-    <string name="settings_info_storage">存储: 可用 %1$s 共 %2$s</string>
+    <string name="settings_info_storage">存储: %1$s</string>
     <string name="settings_info_system">系统: Android %1$s</string>
     <string name="settings_item_about">关于</string>
-    <string name="settings_item_audio">默认音频编码</string>
     <string name="settings_item_codec">默认视频编码</string>
     <string name="settings_item_info">设备信息</string>
     <string name="settings_item_network">网络测试</string>
     <string name="settings_item_other">更多设置</string>
-    <string name="settings_item_player_type">播放器</string>
     <string name="settings_item_resolution">默认分辨率</string>
-    <string name="settings_item_storage">存储管理</string>
-    <string name="settings_item_ui">界面设置</string>
     <string name="settings_network_start_button">开始测试</string>
-    <string name="settings_other_alpha_text">获取最新自动构建的 Alpha 版更新</string>
-    <string name="settings_other_alpha_title">Alpha 版更新</string>
     <string name="settings_other_cookies_text">该功能不适合使用遥控器操作</string>
     <string name="settings_other_cookies_title">Cookies 导入/导出</string>
     <string name="settings_other_firebase_text">这将帮助开发者更快地发现与解决大部分问题</string>
     <string name="settings_other_firebase_title">发送错误日志</string>
     <string name="settings_other_fps_text">在屏幕左上角显示 FPS，这需要重启 App</string>
     <string name="settings_other_fps_title">FPS 显示</string>
-    <string name="settings_other_old_player_text">使用旧版播放器，旧版播放器不会再有任何新特性更新，并且将在后续版本内移除</string>
-    <string name="settings_other_old_player_title">旧版播放器</string>
-    <string name="settings_storage_calculating">计算中</string>
-    <string name="settings_storage_image_cache">图片缓存</string>
-    <string name="settings_storage_libvlc_files">LibVLC 文件</string>
-    <string name="settings_storage_others_cache">其他缓存</string>
-    <string name="settings_ui_density_text">更改整个应用的大小缩放</string>
-    <string name="settings_ui_density_title">界面缩放</string>
     <string name="settings_version_check_update_button">爷要更新</string>
     <string name="settings_version_current_version">当前版本: %1$s</string>
     <string name="settings_version_latest_version">最新版本: %1$s</string>
 
-    <string name="title_activity_anime_index">番剧索引</string>
-    <string name="title_activity_anime_timeline">番剧放送时间表</string>
+    <string name="player_tip_need_pay">请先购买影片再进行观看\n不支持试看</string>
+
     <string name="title_activity_favorite">个人收藏</string>
-    <string name="title_activity_follow">已关注</string>
-    <string name="title_activity_following_season">正在追</string>
     <string name="title_activity_history">历史记录</string>
     <string name="title_activity_login">登录</string>
-    <string name="title_activity_search_input">搜索输入</string>
-    <string name="title_activity_search_result">搜索结果</string>
     <string name="title_activity_season_info">剧集信息</string>
     <string name="title_activity_settings">设置</string>
     <string name="title_activity_speed_test">网络测速</string>
-    <string name="title_activity_tag">视频标签</string>
     <string name="title_activity_up_info">UP 投稿</string>
     <string name="title_activity_user_info">用户信息</string>
     <string name="title_activity_video_info">视频信息</string>
     <string name="title_activity_video_player">视频播放</string>
-    <string name="title_activity_video_player_v3">视频播放</string>
 
     <string name="top_nav_item_anime">番剧</string>
     <string name="top_nav_item_dynamics">动态</string>
     <string name="top_nav_item_partition">分区</string>
-    <string name="top_nav_item_popular">热门</string>
+    <string name="top_nav_item_popular">热门推荐</string>
     <string name="top_nav_item_search">搜索</string>
 
     <string name="user_homepage_anime">我追的番</string>
     <string name="user_homepage_favorite">私人藏品</string>
-    <string name="user_homepage_follow">已关注</string>
     <string name="user_homepage_recent">最近播放记录</string>
-    <string name="user_info_Incognito_mode_off">未开启</string>
-    <string name="user_info_Incognito_mode_on">已开启</string>
-    <string name="user_info_Incognito_mode_title">隐身模式</string>
-    <string name="user_info_level">Lv%1$s</string>
-    <string name="user_info_uid">UID: %1$s</string>
 
     <string name="video_aspect_ratio_default">默认</string>
     <string name="video_aspect_ratio_four_to_three">4:3</string>
     <string name="video_aspect_ratio_sixteen_to_nine">16:9</string>
-    <string name="video_codec_av1" tools:ignore="Typos">AV1</string>
+    <string name="video_codec_av1">AV1</string>
     <string name="video_codec_avc">H.264</string>
-    <string name="video_codec_dvh1" tools:ignore="Typos">Dolby Vision (DVH1)</string>
+    <string name="video_codec_dvh1">Dolby Vision (DVH1)</string>
     <string name="video_codec_hevc">H.265</string>
-    <string name="video_codec_hvc1" tools:ignore="Typos">Dolby Vision (HVC1)</string>
+    <string name="video_codec_hvc1">Dolby Vision (HVC1)</string>
     <string name="video_controller_menu_danmaku_area_tip">按 “上键” 或 “下键” 进行调节</string>
-    <string name="video_info_argue_tip_vertical_screen">温馨提示：该稿件包含竖屏视频内容</string>
-    <string name="video_info_description_title">视频简介</string>
-    <string name="video_info_follow">关注</string>
-    <string name="video_info_followed">已关注</string>
-    <string name="video_info_part_row_title">视频分 P</string>
-    <string name="video_info_related_video_title">视频推荐</string>
-    <string name="video_info_tags">标签</string>
-    <string name="video_info_time">投稿时间: %1$s</string>
-    <string name="video_info_ugc_season_row_title">视频合集</string>
-    <string name="video_player_menu_danmaku_area">显示区域</string>
-    <string name="video_player_menu_danmaku_opacity">不透明度</string>
-    <string name="video_player_menu_danmaku_size">字体缩放</string>
-    <string name="video_player_menu_danmaku_switch">弹幕类型</string>
-    <string name="video_player_menu_danmaku_type_all">全部弹幕</string>
-    <string name="video_player_menu_danmaku_type_bottom">底部弹幕</string>
-    <string name="video_player_menu_danmaku_type_cross">滚动弹幕</string>
-    <string name="video_player_menu_danmaku_type_top">顶部弹幕</string>
-    <string name="video_player_menu_nav_danmaku">弹幕设置</string>
-    <string name="video_player_menu_nav_picture">画面音频</string>
-    <string name="video_player_menu_nav_subtitle">字幕设置</string>
-    <string name="video_player_menu_picture_aspect_ratio">画面比例</string>
-    <string name="video_player_menu_picture_audio">音频编码</string>
-    <string name="video_player_menu_picture_codec">视频编码</string>
-    <string name="video_player_menu_picture_play_speed">播放速度</string>
-    <string name="video_player_menu_picture_resolution">清晰度</string>
-    <string name="video_player_menu_subtitle_background_opacity">背景不透明度</string>
-    <string name="video_player_menu_subtitle_bottom_padding">底部间距</string>
-    <string name="video_player_menu_subtitle_size">字体大小</string>
-    <string name="video_player_menu_subtitle_switch">选择字幕</string>
-    <string name="video_player_press_back_again_to_exit">再次按下返回键退出播放</string>
-    <string name="video_player_referer">https://www.bilibili.com</string>
-    <string name="video_player_user_agent">Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/104.0.0.0 Safari/537.36</string>
 </resources>
